syntax = "proto3";
package proto;

import "google/api/annotations.proto";


service HodDB {
    rpc ExecuteQuery(QueryRequest) returns (QueryResponse) {
        option (google.api.http) = {
            post: "/v1/hod/query"
            body: "*"
        };
    }
    // rpc NotifyChange(NotifyRequest) returns (NotifyResponse);
}

message QueryRequest {
    string query = 1;
}

message QueryResponse {
    repeated string variable = 1;
    repeated Row rows = 2;
    int64 count = 3;
    int64 elapsed = 4;
    repeated string errors = 5;
}

message Row {
    repeated URI uris = 1;
}

message URI {
    string namespace = 1;
    string value = 2;
}
